# vcell-fvsolver

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  backup_conanfile.txt  conanfile.txt  pyproject.toml
.github/workflows/: build_wheels.yml  cd.yml  conda.yml  docker.yml  enscripten.yaml  pip.yml  wheels.yml
PCGPack/: CMakeLists.txt
VCell/: CMakeLists.txt
VCell/include/VCELL/: AlgebraicSystem.h  CartesianMesh.h  EllipticVolumeEqnBuilder.h  EqnBuilder.h  EqnBuilderReactionForward.h  FVDataSet.h  FVSolver.h  FastSystem.h  FastSystemExpression.h  Feature.h  JumpCondition.h  Membrane.h  MembraneEqnBuilderDiffusion.h  MembraneEqnBuilderForward.h  MembraneRegionEqnBuilder.h  MembraneRegionVarContextExpression.h  MembraneVarContextExpression.h  Mesh.h  ODESolver.h  PDESolver.h  PostProcessingHdf5Writer.h  Scheduler.h  SerialScheduler.h  SimTool.h  Simulation.h  SimulationExpression.h  Solver.h  SolverMain.h  SparseLinearSolver.h  SparseVolumeEqnBuilder.h  Structure.h  SundialsPdeScheduler.h  VCellModel.h  VarContext.h  VolumeRegionEqnBuilder.h  VolumeRegionVarContextExpression.h  VolumeVarContextExpression.h
VCell/src/: CartesianMesh.cpp  DomainPDEScheduler.cpp  EllipticVolumeEqnBuilder.cpp  EqnBuilderReactionForward.cpp  FVDataSet.cpp  FVSolver.cpp  FastSystemExpression.cpp  Feature.cpp  FiniteVolume.cpp  JumpCondition.cpp  Membrane.cpp  MembraneEqnBuilderDiffusion.cpp  MembraneEqnBuilderForward.cpp  MembraneRegionEqnBuilder.cpp  MembraneRegionVarContextExpression.cpp  MembraneVarContextExpression.cpp  ODESolver.cpp  PDESolver.cpp  PostProcessingHdf5Writer.cpp  Scheduler.cpp  SerialScheduler.cpp  SimTool.cpp  Simulation.cpp  SimulationExpression.cpp  Solver.cpp  SolverMain.cpp  SparseLinearSolver.cpp  SparseVolumeEqnBuilder.cpp  Structure.cpp  SundialsPdeScheduler.cpp  TIFFImage.cpp  VCellModel.cpp  VarContext.cpp  VolumeRegionEqnBuilder.cpp  VolumeRegionVarContextExpression.cpp  VolumeVarContextExpression.cpp
VCell/tests/: CMakeLists.txt  TestSmoldyn.cpp  TestVCell.cpp
VCell/tests/smoke/: SimID_1585623750_0_.functions  SimID_1585623750_0_.fvinput  SimID_1585623750_0_.fvinput.in  SimID_1585623750_0_.hdf5  SimID_1585623750_0_.log.expected  SimID_1585623750_0_.mesh  SimID_1585623750_0_.meshmetrics  SimID_1585623750_0_.vcg  SimID_1585623750_0_00.zip.expected  SimID_1585623750_0__0.simtask.xml  smoke.py
VCell/tests/testFiles/SmoldynComplexDataStructures/: TestSmoldynCHashtable.cpp  TestSmoldynCLinkedList.cpp  TestSmoldynCVector.cpp
VCell/tests/testFiles/input/: testResourceLocations.h.in
VCell/tests/testFiles/input/CustomCHashtableTest/: sampleInput.txt
VCell/tests/testFiles/input/Smoldyn/: input.functions  input.mesh  input.smoldynInput  input.subdomains  input.xml
VCellMessaging/include/VCELL/: SimulationMessaging.h
VCellMessaging/src/: SimulationMessaging.cpp
VCellZipUtils/: CMakeLists.txt
VCellZipUtils/include/VCELL/: ZipUtils.h
VCellZipUtils/src/: ZipUtils.cpp
blas/: CMakeLists.txt
bridgeVCellSmoldyn/: CMakeLists.txt  VCellMesh.cpp  VCellSmoldynOutput.cpp  VCellSmoldynOutput.h  VCellValueProvider.cpp  vcell_smoldyn.cpp  vcell_smoldyn_entrypoint.cpp  vcellcmd.cpp  vcellhybrid.cpp  vcellhybrid.h
conan-profiles/CI-CD/: Linux-AMD64_profile.txt  Linux-ARM64_profile.txt  MacOS-AMD64_profile.txt  MacOS-ARM64_profile.txt  Windows-AMD64_profile.txt  Windows-AMD64_profile_OLD.txt  Windows-ARM64_profile.txt
docker/: Dockerfile_fvsolver_manylinux_2_34_aarch64  Dockerfile_fvsolver_manylinux_2_34_x86_64
libzip-1.2.0/: CMakeLists.txt
libzip-1.2.0/lib/: CMakeLists.txt  zipwin32.h
libzip-1.2.0/regress/: CMakeLists.txt
libzip-1.2.0/src/: CMakeLists.txt
patches/: libzippp_patch.diff
pyvcell-fvsolver/: CMakeLists.txt  README.md  pyproject.toml
pyvcell-fvsolver/include/: add.h
pyvcell-fvsolver/src/: SolverMain.cpp  add.cpp  example.cpp  main.cpp  pyvcell_fvsolver.cpp
smoldyn-2.38/: CMakeLists.txt  LICENSE
smoldyn-2.38/source/Smoldyn/: smolcmd.c  smolcomparts.c  smoldyn.h  smoldynfuncs.h  smollattice.c  smolmolec.c  smolport.c  smolreact.c  smolsim.c  smolsurface.c  vcell_smoldyn.cpp
smoldyn-2.38/source/lib/: LinkedList.c  LinkedList.h  LinkedListNode.c  LinkedListNode.h  LinkedListTest.c  opengl2.h  parse.c
smoldyn-2.38/source/lib/ComplexDataStructures/: Hashtable.c  Hashtable.h  LinkedList.c  LinkedList.h  LinkedListNode.c  LinkedListNode.h  Vector.c  Vector.h
src/: SolverMain.cpp  SolverMain.h  main.cpp
src/pyvcell_fvsolver/: __init__.py
test/: test.py
tests/: test_basic.py
